@@ -1,6 +1,10 @@
 Revision history for mojo-checkbot
 
 0.25 2011/11/12
+  - Improved dom analizer to detect embed, frame, iframe and input for src url.
+  - Fixed a bug on forms that caused dialogs to appere only once per action url.
+  - Changed default ua name
+  - Userinfo for authentication are limited to be used on same port.
 
 0.24 2011/11/12
   - Fixed a bug on performance caused by sleep option
